--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "browserify": "^16.1.1",
     "create-react-class": "^15.6.3",
     "literalify": "^0.4.0",
+    "node-fetch": "^2.1.2",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-dom-factories": "^1.0.2"
